<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_heading"><![CDATA[Task Management & \nTo-Do List]]></string>
    <string name="splash_description">This productive tool is designed to help \nyou better manage your task \nproject-wise conveniently!</string>
    <string name="start">Let\'s Start!</string>
    <string name="hello">Hello!</string>
    <string name="my_name">Le Huong Giang</string>
    <string name="in_progress">In Progress</string>
    <string name="search_task">Search task</string>
    <string name="your_today_task_almost_done">Your today\'s task \nalmost done</string>
    <string name="view_task">View Task</string>
    <string name="add_task">Add Task</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="title">Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description...</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select due date</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="error_time">Please choose end time > start time</string>
    <string name="to_do">To Do</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="in_progress_task_count">Task count</string>
    <string name="detailed_task">Detailed Task</string>
    <string name="archived_task">Archived Task</string>
    <string name="recently_deleted">Recently Deleted</string>
    <string name="calendar">Calendar</string>
    <string name="no_tasks_displayed">No Tasks Displayed</string>
    <string name="selected_date">Selected Date</string>
    <string name="new_category">New Category</string>
    <string name="new_task">New Task</string>
    <string name="category_title">Category Title</string>
    <string name="enter_category_title">Enter category title</string>
    <string name="view_all">View All</string>
    <string name="detailed_category">Detailed Category</string>
    <string name="total">Total:</string>
    <string name="sort_by_due_date_ascending">Sort by Due Date ASC</string>
    <string name="sort_by_due_date_descending">Sort by Due Date DESC</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>

    <string-array name="category_array">
        <item>Work</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Personal</item>
    </string-array>
</resources>