<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.splash.SplashScreenFragment">

    <ImageView
        android:id="@+id/splashElement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/splash_element"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.6"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSplashHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/splash_heading"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashElement" />

    <TextView
        android:id="@+id/tvSplashDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/splash_description"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/gray"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplashHeading" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/start"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:textAllCaps="false"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"

        app:layout_constraintVertical_bias="0.23"
        android:layout_marginHorizontal="20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>