<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.category.addCategory.NewCategoryFragment">

    <TextView
        android:id="@+id/tvNewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/new_category"
        android:textColor="@color/dark_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewCategory">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <TextView
                android:id="@+id/tvCategoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/category_title"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSCategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/enter_category_title"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCategoryLabel" />


            <TextView
                android:id="@+id/tvColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="Choose Category Color"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSCategoryTitle" />

            <LinearLayout
                android:id="@+id/llColorOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvColorLabel">

                <View
                    android:id="@+id/colorOptionYellow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/bright_yellow" />

                <View
                    android:id="@+id/colorOptionRed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/red" />

                <View
                    android:id="@+id/colorOptionGreen"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/green" />

                <View
                    android:id="@+id/colorOptionLightGray"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/light_gray" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/yellow"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="Add Category"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardviewCategoryTitle"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>
